<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FunMaths">

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/funMaths_backBtn"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:padding="12dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/linotte_semi_bold"
            android:text="Fun Maths"
            android:textColor="#424242"
            android:textSize="25dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/mathsFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/math"
                        android:textColor="#424242"
                        android:textSize="15dp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/funmathsv1" />


                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/mathsSub1"
                        android:textColor="@color/md_grey_500"
                        android:textSize="13dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="120dp"
                android:background="#f1f1f1" />

            <android.support.v7.widget.CardView
                android:id="@+id/mathsSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/math2"
                        android:textColor="#424242"
                        android:textSize="15dp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/funmathsv2" />


                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/mathsSub2"
                        android:textColor="@color/md_grey_500"
                        android:textSize="13dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="120dp"
                android:background="#f1f1f1" />

            <android.support.v7.widget.CardView
                android:id="@+id/mathsThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/math3"
                        android:textColor="#424242"
                        android:textSize="15dp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/funmathsv3" />


                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/mathsSub3"
                        android:textColor="@color/md_grey_500"
                        android:textSize="13dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="120dp"
                android:background="#f1f1f1" />

            <android.support.v7.widget.CardView
                android:id="@+id/mathsFourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/math4"
                        android:textColor="#424242"
                        android:textSize="15dp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/funmathsv4" />


                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/linotte_semi_bold"
                        android:gravity="left|center"
                        android:text="@string/mathsSub4"
                        android:textColor="@color/md_grey_500"
                        android:textSize="13dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>